# llmInOCR

./: .gitignore  README.md
.github/workflows/: release.yml
src/: Cargo.toml  tauri.conf.json
src/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
