[package]
name = "llminocr"
version = "0.1.1"
description = "llmInOCR Tauri Desktop"
authors = ["konwaywood"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "llminocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
